--- a/Primeiro Módulo/index.html
+++ b/Primeiro Módulo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="estruturasDeDecisao.js">
+        <script type="text/javascript" src="matrizes.js">
         </script>
     </head>
     <body>
